--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= feed_item.id %>" class="item">
+<div class="item">
 
 <div data-toggle="modal" href="#<%= feed_item.id %>" style="cursor:pointer;cursor:hand;" >
   <span ><%= image_tag feed_item.image_url.to_s if feed_item.image? %></span>
