--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,38 @@
+<ar style="position:fixed;left:0px;top:0px;width:100%;height:55px;"></ar>
+<ar style="position:fixed;left:0px;bottom:0px;width:100%;height:40px;">
+	<% if signed_in? %>
+	<%= link_to "Sign out", signout_path, method: "delete" %>
+	<% end %>	
+</ar>
+<div style="margin: 0px auto;width:960px;">
+<bar style="position:fixed;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:80px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:160px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:240px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:320px;top:0px;width:80px;height:55px;"></bar>
+<div style="position:fixed;margin-left:400px;top:0px;width:160px;height:55px;z-index:100;">
+	<section>
+	  <%= render 'shared/stats' %>
+	</section>
+</div>
+<bar style="position:fixed;margin-left:560px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:640px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:720px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:800px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:880px;top:0px;width:80px;height:55px;"></bar>
+</div>
+<div style="margin: 0px auto;width:960px;">
+<%= link_to root_path do %><bar1 style="position:fixed;margin-left:322px;top:55px;width:106px;height:40px;"></bar1><% end %>
+<%= link_to '/feed' do %><bar1 style="position:fixed;margin-left:428px;top:55px;width:108px;height:40px;"></bar1><% end %>
+<%= link_to current_user do %><bar1 style="position:fixed;margin-left:536px;top:55px;width:106px;height:40px;"></bar1><% end %>
+
+
+<div style="margin: 0px auto;width:960px;">
+<bar data-toggle="modal" href="#entermodal" style="border:0px;position:fixed;bottom:0px;margin-left:400px;width:160px;height:41px;z-index:300;">
+<h2 style="text-align:center;">FEMYNYN<h2>
+</bar>
+</div>
+
 <h1>Listing users</h1>
 
 <table>
@@ -19,5 +54,3 @@
 </table>
 
 <br />
-
-<%= link_to 'New User', new_user_path %>
