--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 <ar style="position:fixed;left:0px;bottom:0px;width:100%;height:40px;">
 	<% if signed_in? %>
 	<%= link_to "Sign out", signout_path, method: "delete" %>
-	<%= link_to "Settings", edit_user_path(current_user) %>
+	<%= link_to "Directory", users_path, method: "delete" %>
 	<% end %>	
 </ar>
 <div style="margin: 0px auto;width:960px;">
@@ -68,6 +68,7 @@
 
     <span style="text-align:center;position:absolute;margin-top:165px;margin-left:3px;">
 	<%= render 'follow_form' if signed_in? %>
+	<%= link_to "Edit", edit_user_path(current_user), class: "btn", style: "background-color:transparent;width:147px" if @user == current_user %>
   	</span>
 
 	<span href="<%= following_user_path(@user) %>" style="text-align:center;position:absolute;margin-left:10px;margin-top:110px;">
