--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,2 +1,3 @@
-$('#comments').html("<%= escape_javascript(render(:partial =>
-@micropost.comments)) %>");
+$("#<%=@micropost.id%>").html("<%= escape_javascript(render(@micropost.comments)) %>");
+
+$("#<%= @comment.id %>").effect("highlight", {}, 3000);
