--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,3 +1,9 @@
 <%= div_for comment do %>
-<%= comment.body %>
+<span class="comments">
+	<span style="color:white;right:256px;top:5px;float:left;"><%= image_tag comment.user.avatar_url(:avatar) if 			comment.user.avatar? %></span>
+	<span style="font-size:14px;"><%= comment.user.name %>: </span>
+	<span><%= comment.body %></span>
+	<span style="font-size:10px;font-weight:normal;float:right;"><%= time_ago_in_words(comment.created_at) %> ago </span>
+	
+</span>
 <% end %>
