--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -2,6 +2,9 @@
 
 <div data-toggle="modal" href="#<%= micropost.id %>4" style="cursor:pointer;cursor:hand;" >
   <span ><%= image_tag micropost.image_url(:micropost) if micropost.image? %></span>
+  
+  <div class="link"><a href= <%= micropost.link %> ></a></div>
+
   <% if micropost.content? %>
   <div class="content"><%= micropost.content %></div>
   <% end %>
@@ -36,16 +39,25 @@
 
 
 
-<div class="modal hide" id="<%= micropost.id %>4" style="position:fixed;left:295px;height:90%;top:270px;width:940px;background-color:#953361;">
+<div class="modal hide" id="<%= micropost.id %>4" style="position:fixed;margin-left:-470px;height:90%;top:270px;width:940px;background-color:#953361;">
 	
 
   <div><%= image_tag micropost.image_url(:lmicropost) if micropost.image? %></div>
-
+  
+  <div class="linkl" style="width:680px;"><a href= <%= micropost.link %> ></a></div>
   <div class="content" style="width:660px;"><%= micropost.content if micropost.content? %></div>
+
+<% micropost.tag_list.each do |tag_list| %>
+<%= link_to tagged_url(:tag => tag_list) do %>
+<div class="tag" style="display:block;background-color:white;position:relative;"><%= tag_list %></div>
+<% end %>
+<% end %>
+	
+	
 	
 	<div style="position:absolute;top:0px;right:0px;">
-		<span style="color:white;position:absolute;right:256px;top:5px;"><%= image_tag @user.avatar_url(:avatar) if @user.avatar? %></span>
-		<h1 style="color:white;position:absolute;right:125px;top:5px;"><%= @user.name %></h1>
+		<span style="color:white;position:absolute;right:256px;top:5px;"><%= image_tag micropost.user.avatar_url(:avatar) if micropost.user.avatar? %></span>
+		<h1 style="color:white;position:absolute;right:125px;top:5px;"><%= micropost.user.name %></h1>
 	</div>
 	
 	<div style="position:absolute;top:60px;right:2px;width:254px;">
@@ -55,9 +67,11 @@
 	<% end %>
 	</div>
 	
-	<div id="<%=micropost.id%>" style="position:absolute;top:155px;right:0px;width:240px;">
+	<div id="<%=micropost.id%>" style="position:absolute;top:155px;right:0px;width:253px;">
 	    <%= render micropost.comments %>
 	</div>
+	
+
 
 </div>
 </div>
