--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<ar style="position:fixed;left:0px;top:0px;width:100%;height:55px;"></ar>
+<ar style="position:fixed;left:0px;top:0px;width:100%;height:55px;box-shadow: 0px 2px 2px 0px black;"></ar>
 <ar style="position:fixed;left:0px;bottom:0px;width:100%;height:40px;">
 	<% if signed_in? %>
 	<%= link_to "Sign out", signout_path, method: "delete" %>
@@ -11,11 +11,13 @@
 <bar style="position:fixed;margin-left:160px;top:0px;width:80px;height:55px;"></bar>
 <bar style="position:fixed;margin-left:240px;top:0px;width:80px;height:55px;"></bar>
 <bar style="position:fixed;margin-left:320px;top:0px;width:80px;height:55px;"></bar>
-<div style="position:fixed;margin-left:400px;top:0px;width:160px;height:55px;z-index:100;">
+<bar style="position:fixed;margin-left:400px;top:0px;width:160px;height:56px;z-index:900;box-shadow: 0px 3px 3px 0px black;">
 	<section>
+	  <% if signed_in? %>
 	  <%= render 'shared/stats' %>
+	  <% end %>
 	</section>
-</div>
+</bar>
 <bar style="position:fixed;margin-left:560px;top:0px;width:80px;height:55px;"></bar>
 <bar style="position:fixed;margin-left:640px;top:0px;width:80px;height:55px;"></bar>
 <bar style="position:fixed;margin-left:720px;top:0px;width:80px;height:55px;"></bar>
@@ -23,18 +25,23 @@
 <bar style="position:fixed;margin-left:880px;top:0px;width:80px;height:55px;"></bar>
 </div>
 <div style="margin: 0px auto;width:960px;">
-<%= link_to root_path do %><bar1 style="position:fixed;margin-left:322px;top:55px;width:106px;height:40px;"></bar1><% end %>
-<%= link_to '/feed' do %><bar1 style="position:fixed;margin-left:428px;top:55px;width:108px;height:40px;"></bar1><% end %>
-<%= link_to current_user do %><bar1 style="position:fixed;margin-left:536px;top:55px;width:106px;height:40px;"></bar1><% end %>
+<%= link_to root_path do %><bar style="z-index:90;position:fixed;margin-left:322px;top:55px;width:106px;height:40px;">
+	<img src="/assets/globe.png" alt="rss feed" style="opacity:0.3;margin-left:42px;margin-top:10px;width:20px;height:20px;"/>
+</bar1><% end %>
+<%= link_to '/feed' do %><bar style="z-index:90;position:fixed;margin-left:428px;top:55px;width:106px;height:40px;">
+	<img src="/assets/user_group.png" alt="rss feed" style="opacity:0.3;margin-left:38px;margin-top:10px;width:30px;height:20px;"/>
+</bar1><% end %>
+<%= link_to current_user do %><bar style="z-index:90;position:fixed;margin-left:534px;top:55px;width:105px;height:40px;">
+	<img src="/assets/user.png" alt="rss feed" style="opacity:0.3;color:black;margin-left:42px;margin-top:10px;width:20px;height:20px;"/>
+</bar1><% end %>
 
-<bar1 style="right:160px;position:fixed;margin-left:720px;top:55px;width:80px;height:40px;"></bar1>
-<bar1 style="right:80px;position:fixed;margin-left:800px;top:55px;width:80px;height:40px;"></bar1>
-<bar1 style="right:0px;position:fixed;margin-left:880px;top:55px;width:80px;height:40px;"></bar1>
+
+<bar style="z-index:60;right:0px;position:fixed;margin-left:880px;top:55px;width:238px;height:40px;box-shadow: 0px 2px 2px 0px black;"></bar>
 <div style="right:0px;position:fixed;margin-left:720px;top:96px;width:240px;height:100%;background:#76284D;z-index:-10;"></div>	
 </div>
 <div style="margin: 0px auto;width:960px;">
-<bar data-toggle="modal" href="#entermodal" style="border:0px;position:fixed;bottom:0px;margin-left:400px;width:160px;height:41px;z-index:300;">
-<h2 style="text-align:center;">FEMYNYN<h2>
+<bar data-toggle="modal" href="#entermodal" style="border:0px;position:fixed;bottom:0px;margin-left:400px;height:41px;">
+<img src="/assets/logo.png" alt="rss feed" />
 </bar>
 </div>
 <% @micropost  = current_user.microposts.build if signed_in? %>
