--- a/app/views/static_pages/feed.html.erb
+++ b/app/views/static_pages/feed.html.erb
@@ -1,49 +1,4 @@
-<ar style="position:fixed;left:0px;top:0px;width:100%;height:55px;box-shadow: 0px 2px 2px 0px black;"></ar>
-<ar style="position:fixed;left:0px;bottom:0px;width:100%;height:40px;">
-	<% if signed_in? %>
-	<%= link_to "Sign out", signout_path, method: "delete" %>
-	<%= link_to "Directory", users_path, method: "delete" %>
-	<% end %>	
-</ar>
-<div style="margin: 0px auto;width:960px;">
-<bar style="position:fixed;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:80px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:160px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:240px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:320px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:400px;top:0px;width:160px;height:55px;z-index:900;box-shadow: 0px 3px 3px 0px black;">
-	<section>
-	  <% if signed_in? %>
-	  <%= render 'shared/stats' %>
-	  <% end %>
-	</section>
-</bar>
-<bar style="position:fixed;margin-left:560px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:640px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:720px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:800px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:880px;top:0px;width:80px;height:55px;"></bar>
-</div>
-<div style="margin: 0px auto;width:960px;">
-<%= link_to root_path do %><bar style="z-index:10;position:fixed;margin-left:322px;top:55px;width:106px;height:40px;">
-	<img src="/assets/globe.png" alt="rss feed" style="opacity:0.3;margin-left:42px;margin-top:10px;width:20px;height:20px;"/>
-</bar1><% end %>
-<%= link_to '/feed' do %><bar style="z-index:10;position:fixed;margin-left:428px;top:55px;width:106px;height:40px;">
-	<img src="/assets/user_group.png" alt="rss feed" style="opacity:0.3;margin-left:38px;margin-top:10px;width:30px;height:20px;"/>
-</bar1><% end %>
-<%= link_to current_user do %><bar style="z-index:10;position:fixed;margin-left:534px;top:55px;width:105px;height:40px;">
-	<img src="/assets/user.png" alt="rss feed" style="opacity:0.3;color:black;margin-left:42px;margin-top:10px;width:20px;height:20px;"/>
-</bar1><% end %>
-
-
-<bar style="z-index:60;right:0px;position:fixed;margin-left:880px;top:55px;width:238px;height:40px;box-shadow: 0px 2px 2px 0px black;"></bar>
-<div style="right:0px;position:fixed;margin-left:720px;top:96px;width:240px;height:100%;background:#76284D;z-index:-10;"></div>	
-</div>
-<div style="margin: 0px auto;width:960px;">
-<bar data-toggle="modal" href="#entermodal" style="border:0px;position:fixed;bottom:0px;margin-left:400px;height:41px;">
-<img src="/assets/logo.png" alt="rss feed" />
-</bar>
-</div>
+<%= render 'shared/header' %>
 
 
 	
