--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -8,6 +8,14 @@
  *
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
  */
+
+	@font-face {
+	font-family: "bankg";
+	src: url("../fonts/bankg.ttf");
+	src: local("?"),
+	url("../fonts/bankg.ttf") format("truetype"),
+	}
+
 article,
 aside,
 details,
@@ -86,6 +94,56 @@ ar {
 .css3 { font-size: 1.4em; }
 .css4 { font-size: 1.6em; }
 
+.bar {
+	cursor: pointer;cursor: hand;
+	z-index:100;
+	background-image: linear-gradient(bottom, rgb(89,5,44) 22%, rgb(226,30,122) 100%);
+	background-image: -o-linear-gradient(bottom, rgb(89,5,44) 22%, rgb(226,30,122) 100%);
+	background-image: -moz-linear-gradient(bottom, rgb(89,5,44) 22%, rgb(226,30,122) 100%);
+	background-image: -webkit-linear-gradient(bottom, rgb(89,5,44) 22%, rgb(226,30,122) 100%);
+	background-image: -ms-linear-gradient(bottom, rgb(89,5,44) 22%, rgb(226,30,122) 100%);
+
+	background-image: -webkit-gradient(
+		linear,
+		left bottom,
+		left top,
+		color-stop(0.22, rgb(89,5,44)),
+		color-stop(1, rgb(226,30,122))
+	);
+	border: 1px solid #620631;
+	font-size:18px;color:white;text-align:center;font-family: "bankg";
+}
+
+.bar:hover {
+	background:#59052C;
+	cursor: hand;
+}
+
+tbar {
+	cursor: pointer;cursor: hand;
+	z-index:100;
+	background-image: linear-gradient(bottom, rgb(89,5,44) 22%, rgb(226,30,122) 100%);
+	background-image: -o-linear-gradient(bottom, rgb(89,5,44) 22%, rgb(226,30,122) 100%);
+	background-image: -moz-linear-gradient(bottom, rgb(89,5,44) 22%, rgb(226,30,122) 100%);
+	background-image: -webkit-linear-gradient(bottom, rgb(89,5,44) 22%, rgb(226,30,122) 100%);
+	background-image: -ms-linear-gradient(bottom, rgb(89,5,44) 22%, rgb(226,30,122) 100%);
+
+	background-image: -webkit-gradient(
+		linear,
+		left bottom,
+		left top,
+		color-stop(0.22, rgb(89,5,44)),
+		color-stop(1, rgb(226,30,122))
+	);
+	border: 1px solid #620631;
+	font-size:18px;color:white;text-align:center;font-family: "bankg";
+	display: table;
+}
+
+tbar p {
+	vertical-align:middle;display:table-cell;
+}
+
 bar {
 	cursor: pointer;cursor: hand;
 	z-index:100;
@@ -103,6 +161,11 @@ bar {
 		color-stop(1, rgb(226,30,122))
 	);
 	border: 1px solid #620631;
+	font-size:18px;color:white;text-align:center;font-family: "bankg";
+}
+
+bar p {
+	vertical-align:middle;display:table-cell;
 }
 
 barr {
@@ -120,13 +183,12 @@ barr {
 		color-stop(0.22, rgb(89,5,44)),
 		color-stop(1, rgb(226,30,122))
 	);
-
+	
 }
 
 barr:hover {
 	cursor: pointer;cursor: hand;	
-background:#59052C;
-cursor: hand;
+	background:#59052C;
 }
 
 bar1 {
@@ -139,7 +201,6 @@ bar1 {
 bar1:hover {
 	background:#76284D;
 	cursor: pointer;cursor: hand;
-
 }
 
 bar:hover {
@@ -340,7 +401,7 @@ body {
   font-size: 13px;
   line-height: 18px;
   color: #999999;
-  background-color: black;
+  background-color: #1D1D1D;
 }
 a {
   color: #0071BC;
@@ -582,9 +643,11 @@ h1 {
   font-size: 30px;
   line-height: 36px;
   color:#CC337A;
+  font-family: "bankg";
 }
 h1 small {
   font-size: 18px;
+  font-family: "bankg";
 }
 h2 {
   font-size: 24px;
@@ -599,6 +662,7 @@ h3 {
   line-height: 27px;
   font-weight:bold;
   color:#CC337A;
+  font-family: "bankg";
 }
 h3 small {
   font-size: 14px;
@@ -615,7 +679,7 @@ h4 small {
   font-size: 12px;
 }
 h5 {
-  font-size: 10px;
+  font-size: 9px;
   color:#CC337A;
 }
 h6 {
@@ -827,9 +891,10 @@ input,
 button,
 select,
 textarea {
-  font-size: 13px;
+  font-size: 16px;
   font-weight: normal;
-  line-height: 18px;
+  line-height: 16px;
+  color:white;
 }
 input,
 button,
@@ -4914,7 +4979,7 @@ input:focus,
 textarea:focus,
 input.focused,
 textarea.focused {
-  border-color: #52a8ec;
+  border-color: white;
   outline: 0;
   outline: thin dotted \9;
   /* IE6-9 */
