--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,95 +1,16 @@
-<ar style="position:fixed;left:0px;top:0px;width:100%;height:55px;box-shadow: 0px 2px 2px 0px black;"></ar>
-<ar style="position:fixed;left:0px;bottom:0px;width:100%;height:40px;">
-	<% if signed_in? %>
-	<%= link_to "Sign out", signout_path, method: "delete" %>
-	<%= link_to "Directory", users_path, method: "delete" %>
-	<% end %>	
-</ar>
-<div style="margin: 0px auto;width:960px;">
-<bar style="position:fixed;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:80px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:160px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:240px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:320px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:400px;top:0px;width:160px;height:56px;z-index:900;box-shadow: 0px 3px 3px 0px black;">
-	<section>
-	  <% if signed_in? %>
-	  <%= render 'shared/stats' %>
-	  <% end %>
-	</section>
-</bar>
-<bar style="position:fixed;margin-left:560px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:640px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:720px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:800px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:880px;top:0px;width:80px;height:55px;"></bar>
-</div>
-<div style="margin: 0px auto;width:960px;">
-<%= link_to root_path do %><bar style="z-index:90;position:fixed;margin-left:322px;top:55px;width:106px;height:40px;">
-	<img src="/assets/globe.png" alt="rss feed" style="opacity:0.3;margin-left:42px;margin-top:10px;width:20px;height:20px;"/>
-</bar1><% end %>
-<%= link_to '/feed' do %><bar style="z-index:90;position:fixed;margin-left:428px;top:55px;width:106px;height:40px;">
-	<img src="/assets/user_group.png" alt="rss feed" style="opacity:0.3;margin-left:38px;margin-top:10px;width:30px;height:20px;"/>
-</bar1><% end %>
-<%= link_to current_user do %><bar style="z-index:90;position:fixed;margin-left:534px;top:55px;width:105px;height:40px;">
-	<img src="/assets/user.png" alt="rss feed" style="opacity:0.3;color:black;margin-left:42px;margin-top:10px;width:20px;height:20px;"/>
-</bar1><% end %>
+<%= render 'shared/header' %>
 
-
-<bar style="z-index:60;right:0px;position:fixed;margin-left:880px;top:55px;width:238px;height:40px;box-shadow: 0px 2px 2px 0px black;"></bar>
-<div style="right:0px;position:fixed;margin-left:720px;top:96px;width:240px;height:100%;background:#76284D;z-index:-10;"></div>	
-</div>
-<div style="margin: 0px auto;width:960px;">
-<bar data-toggle="modal" href="#entermodal" style="border:0px;position:fixed;bottom:0px;margin-left:400px;height:41px;">
-<img src="/assets/logo.png" alt="rss feed" />
-</bar>
-</div>
 <% @micropost  = current_user.microposts.build if signed_in? %>
 <% if signed_in? %>
 
-	<div class="modal hide" id="entermodal">
+<div class="modal hide" id="entermodal">
   <%= render 'shared/micropost_form' %>
-	</div>
+</div>
 
 <% end %>
 
-<ar style="z-index:50;position:absolute;right:240px;margin-top:20px;margin-left:10px;width:180px;height:400px;">
-	<%= image_tag @user.image2_url(:tallavatar) if @user.image2? %>
-</ar>
-<ar style="z-index:50;position:absolute;right:420px;margin-top:20px;margin-left:10px;width:180px;height:400px;">
-	<%= image_tag @user.image3_url(:tallavatar) if @user.image3? %>
-</ar>
-<ar style="z-index:50;position:absolute;right:600px;margin-top:20px;margin-left:10px;width:180px;height:400px;">
-	<%= image_tag @user.image_url(:tallavatar) if @user.image? %>
-</ar>
-<ar style="z-index:50;position:absolute;right:781px;margin-top:20px;margin-left:10px;width:180px;height:200px;">
-	<%= image_tag @user.avatar_url(:lavatar) if @user.avatar? %>
-</ar>
 
-<ar style="z-index:50;position:absolute;right:785px;margin-top:225px;margin-left:10px;width:176px;height:195px;">
-	<% @user ||= current_user %>
-	
-	<span style="text-align:center;position:absolute;margin-top:10px;margin-left:8px;">
-    <h1 style="color:white;"><%= @user.name %></h1>
-  	</span>
-
-    <span style="text-align:center;position:absolute;margin-top:165px;margin-left:3px;">
-	<%= render 'follow_form' if signed_in? %>
-	<%= link_to "Edit", edit_user_path(current_user), class: "btn", style: "background-color:transparent;width:147px" if @user == current_user %>
-  	</span>
-
-	<span href="<%= following_user_path(@user) %>" style="text-align:center;position:absolute;margin-left:10px;margin-top:110px;">
-    <h1 id="following" class="stat" style="color:white;"><%= @user.followed_users.count %></h1><h5 style="color:white;">following</h5>
-  	</span>
-
-    <span style="text-align:center;position:absolute;margin-top:110px;margin-left:73px;">
-    <h1 style="color:white;"><%= @user.microposts.count %></h1><h5 style="color:white;">posts</h5>
-  	</span>
-
-    <span href="<%= followers_user_path(@user) %>" style="text-align:center;position:absolute;margin-top:110px;margin-left:125px;">
-    <h1 id="followers" class="stat" style="color:white;"><%= @user.followers.count %></h1><h5 style="color:white;">followers</h5>
-  	</span>	
-</ar>
+<%= render 'profile' %>
 
 
 <% if @user.microposts.any? %>
@@ -101,6 +22,7 @@
 <aside style="position:absolute;">
   <%= render @microposts.tagged_with(["beauty"], :any => true)  %>
 </div>
+
 <% end %>
 
 
