--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -13,7 +13,7 @@
 	font-family: "bankg";
 	src: url("../fonts/bankg.ttf");
 	src: local("?"),
-	asset-url("../fonts/bankg.ttf") format("truetype");
+	url("../fonts/bankg.ttf") format("truetype");
 	}
 
 article,
