--- a/app/views/shared/_video_form.html.erb
+++ b/app/views/shared/_video_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @micropost, :html => {:multipart => true} do |f| %>
 
-<tbar style="position:fixed;width:600px;height:42px;"><p>Link</p></tbar>
+<tbar style="position:fixed;width:600px;height:42px;"><p>Video</p></tbar>
 
 <tbar style="position:fixed;margin-left:50px;top:200px;width:120px;height:42px;"><p>Video Link</p></tbar>
 <span style="position:fixed;margin-left:168px;top:201px;"><%= f.text_field :link, style: "width:370px;height:30px;" %></span>
