--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -144,6 +144,11 @@ tbar p {
 	vertical-align:middle;display:table-cell;
 }
 
+tbar:hover {
+	background:#59052C;
+	cursor: hand;
+}
+
 bar {
 	cursor: pointer;cursor: hand;
 	z-index:100;
@@ -237,13 +242,12 @@ overflow-y: scroll;
 .comments {
 
   background:white;
-  width: 247px;
+  width: 250px;
   margin-bottom: 3px;
   float:left;
   color:black;
   font-size:12px;
   font-weight:bold;
-
 
 }
 
@@ -681,6 +685,7 @@ h4 small {
 h5 {
   font-size: 9px;
   color:#CC337A;
+  font-family:"bankg";
 }
 h6 {
   font-size: 11px;
@@ -955,20 +960,10 @@ input[type="tel"],
 input[type="color"],
 .uneditable-input {
   background-color: black;
-  border: 1px solid #0071BC;
+  border: 1px solid #59052C;
   height: 50px;
-margin-bottom: 10px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  -webkit-transition: border linear 0.2s, box-shadow linear 0.2s;
-  -moz-transition: border linear 0.2s, box-shadow linear 0.2s;
-  -ms-transition: border linear 0.2s, box-shadow linear 0.2s;
-  -o-transition: border linear 0.2s, box-shadow linear 0.2s;
-  transition: border linear 0.2s, box-shadow linear 0.2s;
+  color:white;
+
 }
 textarea:focus,
 input[type="text"]:focus,
