--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -1,22 +1,20 @@
 <% @user ||= current_user %>
-<div class="stats">
+
 	
-  <span href="<%= following_user_path(@user) %>" style="text-align:center;position:absolute;margin-left:1px;color:#CC337A;">
-    <h1 id="following" class="stat">
+  <div href="<%= following_user_path(@user) %>" style="text-align:center;position:fixed;margin-left:1px;color:#CC337A;">
+    <h1 id="following">
       <%= @user.followed_users.count %>
     </h1>
     <h5>following</h5>
-  </span>
+  </div>
 
-  <span href="<%= followers_user_path(@user) %>" style="text-align:center;position:absolute;margin-top:3px;margin-left:52px;">
+  <div style="text-align:center;position:fixed;margin-top:3px;margin-left:52px;">
 	<%= image_tag @user.avatar_url(:avatar) if @user.avatar? %>
-  </span>
+  </div>
 
-  <span href="<%= followers_user_path(@user) %>" style="text-align:center;position:absolute;margin-left:108px;">
-    <h1 id="followers" class="stat">
+  <div href="<%= followers_user_path(@user) %>" style="text-align:center;position:fixed;margin-left:108px;">
+    <h1 id="followers">
       <%= @user.followers.count %>
     </h1>
     <h5>followers</h5>
-  </span>
-
-</div>
+  </div>
