--- a/app/views/users/_follow.html.erb
+++ b/app/views/users/_follow.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(current_user.relationships.build(followed_id: @user.id),
              remote: true) do |f| %>
   <div><%= f.hidden_field :followed_id %></div>
-  <%= f.submit "Follow", class: "btn", style: "background-color:transparent;width:169px;" %>
+  <%= f.submit "Follow", class: "bar", style: "position:relative;width:170px;height:28px;" %>
 <% end %>
