--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -20,7 +20,7 @@
 
     <span style="text-align:center;position:absolute;margin-top:165px;margin-left:3px;">
 	<%= render 'follow_form' if signed_in? %>
-	<%= link_to "Edit", edit_user_path(current_user), class: "btn", style: "background-color:transparent;width:147px" if @user == current_user %>
+	<%= link_to "Edit", edit_user_path(current_user), class: "bar", style: "position:absolute;width:168px;height:25px;" if @user == current_user %>
   	</span>
 
 	<span href="<%= following_user_path(@user) %>" style="text-align:center;position:absolute;margin-left:10px;margin-top:110px;">
