--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,11 +6,11 @@
 	<% end %>	
 </ar>
 <div style="margin: 0px auto;width:960px;">
-<bar style="position:fixed;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:80px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:160px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:240px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:320px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;top:0px;width:80px;height:55px;"><h5 style="margin-top:40px;">HEALTH</h5></bar>
+<bar style="position:fixed;margin-left:80px;top:0px;width:80px;height:55px;"><h5 style="margin-top:40px;">BEAUTY</h5></bar>
+<bar style="position:fixed;margin-left:160px;top:0px;width:80px;height:55px;"><h5 style="margin-top:40px;">FASHION</h5></bar>
+<bar style="position:fixed;margin-left:240px;top:0px;width:80px;height:55px;"><h5 style="margin-top:40px;">SHOES</h5></bar>
+<bar style="position:fixed;margin-left:320px;top:0px;width:80px;height:55px;"><h5 style="margin-top:40px;">ACCESORIES</h5></bar>
 <bar style="position:fixed;margin-left:400px;top:0px;width:160px;height:56px;z-index:900;box-shadow: 0px 3px 3px 0px black;">
 
 	  <% if signed_in? %>
@@ -18,21 +18,24 @@
 	  <% end %>
 
 </bar>
-<bar style="position:fixed;margin-left:560px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:640px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:720px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:800px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:880px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:560px;top:0px;width:80px;height:55px;"><h5 style="margin-top:40px;">?</h5></bar>
+<bar style="position:fixed;margin-left:640px;top:0px;width:80px;height:55px;"><h5 style="margin-top:40px;">SHOPPING</h5></bar>
+<bar style="position:fixed;margin-left:720px;top:0px;width:80px;height:55px;"><h5 style="margin-top:40px;">MARRIAGE</h5></bar>
+<bar style="position:fixed;margin-left:800px;top:0px;width:80px;height:55px;"><h5 style="margin-top:40px;">RECIPES</h5></bar>
+<bar style="position:fixed;margin-left:880px;top:0px;width:80px;height:55px;"><h5 style="margin-top:40px;">GOSSIP</h5></bar>
 </div>
 <div style="margin: 0px auto;width:960px;">
 <%= link_to root_path do %><bar style="z-index:90;position:fixed;margin-left:322px;top:55px;width:106px;height:40px;">
 	<img src="/assets/globe.png" alt="rss feed" style="opacity:0.3;margin-top:10px;width:20px;height:20px;"/>
+	<h5 style="margin-top:-5px;">all</h5>
 </bar1><% end %>
 <%= link_to '/feed' do %><bar style="z-index:90;position:fixed;margin-left:428px;top:55px;width:106px;height:40px;">
 	<img src="/assets/user_group.png" alt="rss feed" style="opacity:0.3;margin-top:10px;width:30px;height:20px;"/>
+	<h5 style="margin-top:-5px;">following</h5>
 </bar1><% end %>
 <%= link_to current_user do %><bar style="z-index:90;position:fixed;margin-left:534px;top:55px;width:105px;height:40px;">
 	<img src="/assets/user.png" alt="rss feed" style="opacity:0.3;color:black;margin-top:10px;width:20px;height:20px;"/>
+	<h5 style="margin-top:-5px;">profile</h5>
 </bar1><% end %>
 </div>
 
