--- a/app/views/shared/_picture_form.html.erb
+++ b/app/views/shared/_picture_form.html.erb
@@ -2,16 +2,22 @@
 
 <tbar style="position:fixed;width:600px;height:42px;"><p>Picture</p></tbar>
 
-<tbar style="position:fixed;margin-left:50px;top:200px;width:120px;height:42px;"><p>Image</p></tbar>
-<tbar style="position:fixed;margin-left:168px;top:201px;"><%= f.file_field :image, class: "bar", style: "width:370px;height:30px;" %></tbar>
+<div class="btn-group" data-toggle="buttons-radio" style="position:fixed;top:130px;margin-left:50px;">
+  <button type="button" class="btn" style="height:60px;width:166px;">Chatter</button>
+  <button type="button" class="btn" style="height:60px;width:166px;">Question</button>
+  <button type="button" class="btn" style="height:60px;width:166px;">Advice</button>
+</div>
 
-<tbar style="position:fixed;margin-left:50px;top:260px;width:120px;height:102px;"><p>Description</p></tbar>
-<span style="position:fixed;margin-left:168px;top:261px;"><%= f.text_field :content, style: "width:370px;height:91px;" %></span>
+<tbar style="position:fixed;margin-left:50px;top:210px;width:120px;height:42px;"><p>Image</p></tbar>
+<tbar style="position:fixed;margin-left:168px;top:211px;"><%= f.file_field :image, class: "bar", style: "width:370px;height:30px;" %></tbar>
 
-<tbar style="position:fixed;margin-left:50px;top:380px;width:120px;height:42px;"><p>Tags</p></tbar>
-<span style="position:fixed;margin-left:168px;top:381px;"><%= f.text_field :tag_list, style: "width:370px;height:30px;" %></span>
+<tbar style="position:fixed;margin-left:50px;top:270px;width:120px;height:102px;"><p>Description</p></tbar>
+<span style="position:fixed;margin-left:168px;top:271px;"><%= f.text_field :content, style: "width:370px;height:91px;" %></span>
 
-<span style="position:fixed;margin-left:50px;top:460px;"><%= f.submit "Post", class: "bar", style: "width:500px;height:42px;" %></span>
+<tbar style="position:fixed;margin-left:50px;top:390px;width:120px;height:42px;"><p>Tags</p></tbar>
+<span style="position:fixed;margin-left:168px;top:391px;"><%= f.text_field :tag_list, style: "width:370px;height:30px;" %></span>
+
+<span style="position:fixed;margin-left:50px;top:470px;"><%= f.submit "Post", class: "bar", style: "width:500px;height:42px;" %></span>
 
 <% end %>
 
