--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -27,15 +27,15 @@
 <div style="margin: 0px auto;width:960px;">
 <%= link_to root_path do %><bar style="z-index:90;position:fixed;margin-left:322px;top:55px;width:106px;height:40px;">
 	<img src="/assets/globe.png" alt="rss feed" style="opacity:0.3;margin-top:10px;width:20px;height:20px;"/>
-	<h5 style="margin-top:-5px;">all</h5>
+	<h5 style="margin-top:-5px;">All</h5>
 </bar1><% end %>
 <%= link_to '/feed' do %><bar style="z-index:90;position:fixed;margin-left:428px;top:55px;width:106px;height:40px;">
 	<img src="/assets/user_group.png" alt="rss feed" style="opacity:0.3;margin-top:10px;width:30px;height:20px;"/>
-	<h5 style="margin-top:-5px;">following</h5>
+	<h5 style="margin-top:-5px;">Following</h5>
 </bar1><% end %>
 <%= link_to current_user do %><bar style="z-index:90;position:fixed;margin-left:534px;top:55px;width:105px;height:40px;">
 	<img src="/assets/user.png" alt="rss feed" style="opacity:0.3;color:black;margin-top:10px;width:20px;height:20px;"/>
-	<h5 style="margin-top:-5px;">profile</h5>
+	<h5 style="margin-top:-5px;">Profile</h5>
 </bar1><% end %>
 </div>
 
