--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -13,7 +13,7 @@
 	font-family: "bankg";
 	src: url("../bankg.ttf");
 	src: local("?"),
-	url("../bankg.ttf") format("truetype");
+	url("/assets/bankg.ttf") format("truetype");
 	}
 
 article,
