--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,7 +13,7 @@
 
 <aside style="position:absolute;">
 
-   <% Micropost.tagged_with(["health", "beauty"], :any => true).each do |micropost| %>
+   <% Micropost.where(kyahai: "3").each do |micropost| %>
 	
 	<div class="question" >
 
