--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,7 +24,7 @@
 </div>
 
 <aside style="position:absolute;">
-  <%= render @microposts.tagged_with(["beauty"], :any => true)  %>
+  <%= render @microposts.where(kyahai: "3")  %>
 </div>
 
 <% end %>
