--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -43,6 +43,7 @@ html {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
 }
+
 a:focus {
   outline: thin dotted #333;
   outline: 5px auto -webkit-focus-ring-color;
@@ -136,12 +137,16 @@ tbar {
 		color-stop(1, rgb(226,30,122))
 	);
 	border: 1px solid #620631;
-	font-size:18px;color:white;text-align:center;font-family: "bankg";
+	font-size:17px;color:white;text-align:center;font-family: "bankg";
 	display: table;
 }
 
 tbar p {
 	vertical-align:middle;display:table-cell;
+}
+
+tbar o {
+	vertical-align:middle;display:table-cell;font-size:15px;
 }
 
 tbar:hover {
@@ -629,7 +634,7 @@ h4,
 h5,
 h6 {
   margin: 0;
-  font-family: inherit;
+  font-family:"bankg";
   font-weight: normal;
   color: #ffffff;
   text-rendering: optimizelegibility;
