--- a/app/views/shared/_feedq.html.erb
+++ b/app/views/shared/_feedq.html.erb
@@ -1,3 +1,3 @@
 <% if @feed_items.any? %>
-    <%= render partial: 'shared/feed_item',  collection: @feed_items.tagged_with(["beauty"], :any => true) %>
+    <%= render partial: 'shared/feed_item',  collection: @feed_items.where(kyahai: "3") %>
 <% end %>
