--- a/app/views/shared/_picture_form.html.erb
+++ b/app/views/shared/_picture_form.html.erb
@@ -3,13 +3,15 @@
 <tbar style="position:fixed;width:600px;height:42px;"><p>Picture</p></tbar>
 
 <div class="btn-group" data-toggle="buttons-radio" style="position:fixed;top:130px;margin-left:50px;">
-  <button type="button" class="btn" style="height:60px;width:166px;">Chatter</button>
-  <button type="button" class="btn" style="height:60px;width:166px;">Question</button>
-  <button type="button" class="btn" style="height:60px;width:166px;">Advice</button>
+  <button type="button" class="btn" style="height:60px;width:166px;">Chatter<%= f.radio_button :kyahai, '2', :checked => true %></button>
+  <button type="button" class="btn" style="height:60px;width:166px;">Question<%= f.radio_button :kyahai, '3' %></button>
+  <button type="button" class="btn" style="height:60px;width:166px;">Advice<%= f.radio_button :kyahai, '4' %></button>
 </div>
 
+
+
 <tbar style="position:fixed;margin-left:50px;top:210px;width:120px;height:42px;"><p>Image</p></tbar>
-<tbar style="position:fixed;margin-left:168px;top:211px;"><%= f.file_field :image, class: "bar", style: "width:370px;height:30px;" %></tbar>
+<span style="position:fixed;margin-left:168px;top:210px;"><%= f.file_field :image, class: "bar", style: "width:370px;height:40px;" %></span>
 
 <tbar style="position:fixed;margin-left:50px;top:270px;width:120px;height:102px;"><p>Description</p></tbar>
 <span style="position:fixed;margin-left:168px;top:271px;"><%= f.text_field :content, style: "width:370px;height:91px;" %></span>
